Newly created `InterfaceDefinition` graphical nodes now have two initial _ports_ named _source_ and _target_.
Additional ports can be created using the _New Port as end_ graphical node tool.
- https://github.com/eclipse-syson/syson/issues/1863[#1863] [diagrams] Dropping an elements on a diagram which is already visible gives feedback again.

=== New features

- https://github.com/eclipse-syson/syson/issues/1977[#1977] [diagram] Display the _timeslice_ and _snapshot_ prefixes in the label of `OccurrenceUsage` graphical nodes and some of the graphical nodes representing subclasses of `OccurrenceUsage`.
- https://github.com/eclipse-syson/syson/issues/1977[#1977] [metamodel] Ensure a _timeSlice_ or a _snapshot_ `OccurrenceUsage` implicitly specializes `Occurrences::Occurrence::timeSlices` or  `Occurrences::Occurrence::snapshots`, directly or indirectly.

== v2026.1.0
 
=== Shapes

- https://github.com/eclipse-syson/syson/issues/1694[#1694] Customize Elasticsearch index to work with SysML metamodel

=== Breaking changes

- [sirius-web] SysON is based on Sirius Web, so please also read https://github.com/eclipse-sirius/sirius-web/blob/master/CHANGELOG.adoc[the breaking changes of Sirius Web].
- [services] move the following methods from `DescriptionNameGenerator` to default methods in `IDescriptionNameGenerator`:
* `String getName(String prefix, String descType, String suffix)`
* `String getNodeName(String prefix, String suffix)`
* `String getBorderNodeName(String prefix, String suffix)`
* `String getInheritedBorderNodeName(String prefix, String suffix)`
* `String getCompartmentName(String prefix, String suffix)`
* `String getCompartmentItemName(String prefix, String suffix)`
* `String getInheritedCompartmentItemName(String prefix, String suffix)`
* `String getEdgeName(String prefix, String suffix)`
- [services] `MetamodelElementQueryService` has been renamed to `MetamodelQueryElementService`.