@@ -140,43 +140,43 @@ public class GVTopNodeCreationTests extends AbstractIntegrationTests {
 
     private static Stream<Arguments> topNodeParameters() {
         return Stream.of(
-                Arguments.of(SysmlPackage.eINSTANCE.getAttributeDefinition(), 2, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getAttributeUsage(), 3, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getAllocationUsage(), 3, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getAllocationDefinition(), 4, 2, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getAcceptActionUsage(), 2, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getActionDefinition(), 6, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getActionUsage(), 7, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getAssignmentActionUsage(), 1, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getComment(), 0, 0, 0, ViewConstants.DEFAULT_NOTE_HEIGHT, ViewConstants.DEFAULT_NOTE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getConcernDefinition(), 8, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getConcernUsage(), 8, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getConstraintDefinition(), 2, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getConstraintUsage(), 4, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getConnectionDefinition(), 5, 2, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getEnumerationDefinition(), 2, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getExhibitStateUsage(), 6, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getInterfaceDefinition(), 7, 6, 2, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getInterfaceUsage(), 4, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getItemDefinition(), 2, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getItemUsage(), 4, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getMetadataDefinition(), 3, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getOccurrenceDefinition(), 3, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getOccurrenceUsage(), 2, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getAttributeDefinition(), 2, 0, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getAttributeUsage(), 3, 0, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getAllocationUsage(), 3, 0, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getAllocationDefinition(), 4, 1, 2, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getAcceptActionUsage(), 2, 0, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getActionDefinition(), 6, 0, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getActionUsage(), 7, 0, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getAssignmentActionUsage(), 1, 0, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getComment(), 0, 0, 0, 0, ViewConstants.DEFAULT_NOTE_HEIGHT, ViewConstants.DEFAULT_NOTE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getConcernDefinition(), 8, 0, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getConcernUsage(), 8, 0, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getConstraintDefinition(), 2, 0, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getConstraintUsage(), 4, 0, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getConnectionDefinition(), 5, 1, 2, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getEnumerationDefinition(), 2, 0, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getExhibitStateUsage(), 6, 0, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getInterfaceDefinition(), 7, 0, 6, 2, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getInterfaceUsage(), 4, 0, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getItemDefinition(), 2, 0, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getItemUsage(), 4, 0, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getMetadataDefinition(), 3, 0, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getOccurrenceDefinition(), 3, 0, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getOccurrenceUsage(), 2, 0, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
                 // A package doesn't have a compartment: it is handled as a custom node
-                Arguments.of(SysmlPackage.eINSTANCE.getPackage(), 0, 0, 0, ViewConstants.DEFAULT_PACKAGE_NODE_HEIGHT, ViewConstants.DEFAULT_PACKAGE_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getPartDefinition(), 11, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getPartUsage(), 11, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getPortDefinition(), 5, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getPortUsage(), 5, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getRequirementDefinition(), 8, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getRequirementUsage(), 8, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getUseCaseDefinition(), 5, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getUseCaseUsage(), 7, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getSatisfyRequirementUsage(), 8, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getStateDefinition(), 6, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getStateUsage(), 6, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
-                Arguments.of(SysmlPackage.eINSTANCE.getViewUsage(), 0, 0, 0, ViewConstants.DEFAULT_VIEW_USAGE_NODE_HEIGHT,
+                Arguments.of(SysmlPackage.eINSTANCE.getPackage(), 0, 0, 0, 0, ViewConstants.DEFAULT_PACKAGE_NODE_HEIGHT, ViewConstants.DEFAULT_PACKAGE_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getPartDefinition(), 11, 0, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getPartUsage(), 11, 0, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getPortDefinition(), 5, 0, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getPortUsage(), 5, 0, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getRequirementDefinition(), 8, 0, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getRequirementUsage(), 8, 0, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getUseCaseDefinition(), 5, 0, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getUseCaseUsage(), 7, 0, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getSatisfyRequirementUsage(), 8, 0, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getStateDefinition(), 6, 0, 0, 0, ViewConstants.DEFAULT_DEFINITION_NODE_HEIGHT, ViewConstants.DEFAULT_DEFINITION_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getStateUsage(), 6, 0, 0, 0, ViewConstants.DEFAULT_USAGE_NODE_HEIGHT, ViewConstants.DEFAULT_USAGE_NODE_WIDTH),
+                Arguments.of(SysmlPackage.eINSTANCE.getViewUsage(), 0, 0, 0, 0, ViewConstants.DEFAULT_VIEW_USAGE_NODE_HEIGHT,
                         ViewConstants.DEFAULT_VIEW_USAGE_NODE_WIDTH)
         ).map(TestNameGenerator::namedArguments);
     }
@@ -194,7 +194,7 @@ public class GVTopNodeCreationTests extends AbstractIntegrationTests {
     @GivenSysONServer({ GeneralViewEmptyTestProjectData.SCRIPT_PATH })
     @ParameterizedTest
     @MethodSource("topNodeParameters")
-    public void createTopNode(EClass eClass, int compartmentCount, int itemsCount, int newBorderNodesCount, int expectedDefaultHeight, int expectedDefaultWidth) {
+    public void createTopNode(EClass eClass, int totalCompartmentCount, int visibleCompartmentCount, int itemsCount, int newBorderNodesCount, int expectedDefaultHeight, int expectedDefaultWidth) {
         var flux = this.givenSubscriptionToDiagram();
 
         AtomicReference<Diagram> diagram = new AtomicReference<>();
@@ -210,7 +210,7 @@ public class GVTopNodeCreationTests extends AbstractIntegrationTests {
 
         Consumer<Object> diagramCheck = assertRefreshedDiagramThat(newDiagram -> {
             var initialDiagram = diagram.get();
-            int createdNodesExpectedCount = 1 + compartmentCount + itemsCount;
+            int createdNodesExpectedCount = 1 + totalCompartmentCount + itemsCount;
             new CheckDiagramElementCount(this.diagramComparator)
                     .hasNewEdgeCount(0)
                     .hasNewNodeCount(createdNodesExpectedCount)
@@ -221,7 +221,8 @@ public class GVTopNodeCreationTests extends AbstractIntegrationTests {
 
             new CheckNodeOnDiagram(diagramDescriptionIdProvider, this.diagramComparator)
                     .hasNodeDescriptionName(newNodeDescriptionName)
-                    .hasCompartmentCount(compartmentCount)
+                    .hasTotalCompartmentCount(totalCompartmentCount)
+                    .hasVisibleCompartmentCount(visibleCompartmentCount)
                     .check(initialDiagram, newDiagram);
 
             var parentNode = newDiagram.getNodes().get(0);
@@ -297,7 +298,7 @@ public class GVTopNodeCreationTests extends AbstractIntegrationTests {
 
             new CheckNodeOnDiagram(diagramDescriptionIdProvider, this.diagramComparator)
                     .hasNodeDescriptionName(newNodeDescriptionName)
-                    .hasCompartmentCount(0)
+                    .hasTotalCompartmentCount(0)
                     .check(initialDiagram, newDiagram);
 
             var parentNode = newDiagram.getNodes().get(0);
