@@ -87,6 +87,8 @@ This tool allows to create a `SatisfyRequirementUsage` between the `Feature` and
 Additional ends can be created using the _New end_ graphical node tool (which replaces the _New Part as end_ previously available only on `AllocationDefinition` graphical nodes).
 ** Newly created `InterfaceDefinition` graphical nodes now have two initial _ports_ named _source_ and _target_.
 Additional ports can be created using the _New Port as end_ graphical node tool.
+- The `ports` and `ends` compartments on a newly created `InterfaceDefinition` graphical nodes are not visible by default.
+They can be revealed if needed using the _Manage Visbility_ action on the graphical node.
 
 
 * In textual import/export:
